syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.content";
package br.com.content;

service ProductService {
	rpc create (ProductRequest) returns (ProductResponse);
	rpc findById (RequestById) returns (ProductResponse);
	rpc delete (RequestById) returns (ProductResponse);
	rpc findAll (Empty) returns (ProductResponseList);
}

message ProductRequest {
	string name = 1;
	double price = 2;
	int32 quantity_in_stock = 3;
}

message ProductResponse {
	int64 id = 1;
	string name = 2;
	double price = 3;
	int32 quantity_in_stock = 4;
}

message RequestById {
	int64 id = 1;
}

message ProductResponseList {
	repeated ProductRequest  products = 1;
}

message Empty {}
